finally fixed the navbar mobile bug where it would be overlapped by page content. Now works as intended

--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -6,6 +6,8 @@
     align-items: center;
     font-size: 1.2rem;
     position: sticky;
+    top: 0;
+    z-index: 3;
 }
 
 .navbarContainer {
@@ -59,6 +61,7 @@
 }
 
 @media only screen and (max-width: 760px) {
+
     .navbarContainerMenu {
         display: flex;
         flex-direction: column;
